# uecide-cli

./: .gitignore  Makefile.am  Makefile.in  README.md  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
include/: Board.hpp  BuiltinCommand.hpp  Compiler.hpp  Context.hpp  Core.hpp  File.hpp  Preferences.hpp  Programmer.hpp  PropertyFile.hpp  Trim.hpp  UObject.hpp  Varcmd.hpp
include/bc/: append.hpp  bullet.hpp  bullet2.hpp  bullet3.hpp  cout.hpp  cp.hpp  delay.hpp  dot.hpp  echo.hpp  end_buffer.hpp  error.hpp  exec.hpp  foreach.hpp  getauth.hpp  gpio.hpp  lock_port.hpp  merge_hex.hpp  port.hpp  push.hpp  scp.hpp  set.hpp  spin.hpp  ssh.hpp  start_buffer.hpp  stdin.hpp  unlock_port.hpp  warning.hpp  write.hpp
include/vc/: basename.hpp  board.hpp  char.hpp  compiler.hpp  core.hpp  csv.hpp  env.hpp  exec.hpp  exists.hpp  files.hpp  find.hpp  foreach.hpp  if.hpp  join.hpp  lc.hpp  math.hpp  onefile.hpp  preproc.hpp  programmer.hpp  random.hpp
m4/: ccache.m4
src/: Board.cpp  Compiler.cpp  Context.cpp  Core.cpp  File.cpp  Makefile.am  Makefile.in  Programmer.cpp  PropertyFile.cpp  UObject.cpp  bc_append.cpp  bc_bullet.cpp  bc_bullet2.cpp  bc_bullet3.cpp  bc_cout.cpp  bc_cp.cpp  bc_delay.cpp  bc_dot.cpp  uecide-cli.cpp  vc_basename.cpp  vc_board.cpp  vc_char.cpp  vc_compiler.cpp  vc_core.cpp  vc_csv.cpp  vc_env.cpp  vc_exec.cpp  vc_exists.cpp  vc_files.cpp  vc_find.cpp  vc_foreach.cpp  vc_if.cpp  vc_join.cpp  vc_lc.cpp  vc_math.cpp  vc_onefile.cpp  vc_preproc.cpp  vc_programmer.cpp  vc_random.cpp
